--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/invoice-tanpay",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -135,5 +135,8 @@
       }
     }
   },
-  "defaultProject": "invoice-tanpay"
+  "defaultProject": "invoice-tanpay",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
