--- a/package.json
+++ b/package.json
@@ -7,31 +7,52 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "generateEntity": "ng generate entity store/ParentFolder/EntityNane --reducers ../index.ts --flat=false"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/fire": "^5.1.1",
+    "@angular/flex-layout": "^7.0.0-beta.22",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/pwa": "^0.11.4",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "^7.1.4",
+    "@ngrx/effects": "^7.0.0",
+    "@ngrx/entity": "^7.0.0",
+    "@ngrx/router-store": "^7.0.0",
+    "@ngrx/store": "^7.0.0",
+    "@ngrx/store-devtools": "^7.0.0",
+    "angular5-csv": "^0.2.10",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.7.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^7.0.1",
+    "jquery": "^3.3.1",
+    "moment": "^2.23.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@ngrx/schematics": "^7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
