--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
+    "angular2-multiselect-dropdown": "^4.1.1",
     "angular5-csv": "^0.2.10",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
@@ -40,6 +41,7 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^7.0.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
